--- a/css/style.css
+++ b/css/style.css
@@ -103,3 +103,9 @@ body {
   color: hsl(228, 45%, 44%);
 }
 
+@media screen and (max-width: 375px) {
+  .card {
+    width: 300px;
+    padding: 2vh;
+  }
+}
